# MIRProject

./: .gitignore  TODO.md  colab.ipynb  pyproject.toml
.github/workflows/: ci.yaml
docs/: BM25.md  Conclusions.md  CountScoring.md  Dataset.md  DefaultIndex.md  DefaultTokenizer.md  Demo.md  DocumentContents.md  DocumentInfo.md  DownloadExtract.md  Index.md  Ir.md  LICENSE  MSMarcoDataset.md  NeuralRelevance.md  NeuralScoring.md  Posting.md  PriorityQueue.md  README.md  SQLIndex.md  ScoringFunction.md  Term.md  Token.md  Tokenizer.md
mir/: __init__.py  colab.ipynb  dataset.py  test.py
mir/file_map/: cache_entry.py  cached_hmap.py  cached_list.py  cached_map.py  file_hmap.py  file_list.py  file_map.py  serde.py
mir/fs_collections/: cache_entry.py  cached_hmap.py  cached_list.py  file_hmap.py  file_list.py  serde.py
mir/ir/: document.py  document_contents.py  document_info.py  index.py  ir.py  posting.py  priority_queue.py  scoring_function.py  term.py  token.py  token_ir.py  tokenizer.py
mir/neural_relevance/: dataset.py  model.py  pos_enc.py
mir/scripts/: demo.py  interactive_db.py  ipynb_compiler.py  manual_scoring.py  test.py
mir/test/: core_index_test_utils.py  file_list_test_utils.py  file_map_test_utils.py  test_bm25f.py  test_cached_hmap.py  test_cached_list.py  test_cached_map.py  test_core_index.py  test_core_ir.py  test_document_content.py  test_document_info.py  test_file_hmap.py  test_file_list.py  test_file_map.py  test_naive_ir.py  test_posting.py  test_posting_list.py  test_priority_queue.py  test_query_matching.py  test_term.py
mir/utils/: compression.py  dataset.py  decorators.py  download_and_extract.py  ipynb_compiler.py  query_matching.py  test.py  trec_eval.py  types.py
(+20 files in other folders)
