[project]
name = "mir"
version = "0.1.0"
description = "MIR Project"
authors = [
    { name = "Ettore Ricci" },
    { name = "Paolo Palumbo" },
    { name = "Zahra Omrani" },
    { name = "Erni Deliallisi" },
]
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "tqdm",
    "iprogress",
    "ipywidgets",
    "unidecode",
    "kaggle",
    "GitPython",
    "nltk",
    "more_itertools",
    "python-terrier"
]

[tool.setuptools]
package-dir = { "mir" = "mir" }
