[project]
name = "mir"
version = "0.1.0"
description = "MIR Project"
dependencies = [ "pandas", "tqdm", "iprogress", "ipywidgets", "unidecode", "kaggle", "GitPython", "nltk", "more_itertools", "python-terrier", "sentence_transformers", "xformers", "tiktoken",]
[[project.authors]]
name = "Ettore Ricci"

[[project.authors]]
name = "Paolo Palumbo"

[[project.authors]]
name = "Zahra Omrani"

[[project.authors]]
name = "Erni Deliallisi"

[project.license]
file = "LICENSE"

[tool.setuptools.package-dir]
mir = "mir"
