[project]
name = "mir"
version = "0.1.0"
description = "MIR Project"
dependencies = [ "pandas", "tqdm", "iprogress", "ipywidgets", "unidecode", "nltk", "more_itertools", "python-terrier", "torch", "transformers", "psutil"]
[[project.authors]]
name = "Ettore Ricci"

[[project.authors]]
name = "Paolo Palumbo"

[[project.authors]]
name = "Zahra Omrani"

[[project.authors]]
name = "Erni Deliallisi"

[project.license]
file = "LICENSE"

[tool.setuptools.package-dir]
mir = "mir"

[tool.poetry.dependencies]
other_package = { git = "https://github.com/facebookresearch/contriever", branch = "main" }